[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "archive_domain"
version = "0.0.1"
description = "Archive OCI IoT Domain telemetry to Object Storage"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "click~=8.2.0",
  "oci~=2.0,>=2.161",
  "oracledb~=3.0",
  "PyYAML~=6.0.0",
]

[project.optional-dependencies]
test = [
  "black==26.3.1",
  "pytest>=9.0",
  "ruff==0.15.8",
]

[project.scripts]
archive-domain = "archive_domain.cli:cli"

[tool.setuptools.packages.find]
include = ["archive_domain*"]
